--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.2
   swipe_cards: ^2.0.0+1
+  badges: ^2.0.1
 
 dev_dependencies:
   flutter_test:
