--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/img/2.jpg
     - assets/img/3.jpg
     - assets/video/1.mp4
+    - assets/video/2.mp4
+    - assets/video/3.mp4
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
